# CodemaoEDUTools

./: .gitignore  2l.py  README.md  __init__.py  control.py  follow.py  get_mytoken.py  login.py  main.py  pyproject.toml  report.py  requirements.txt  send_review.py  setup.py  signature.py  view.py
.github/: pull_request_template.md
.github/workflows/: pypi.yml  release.yml
CodemaoEDUTools/: __init__.py  __main__.py  cli.py
Edu_Reg/: README.md  merge.py  reg.py
Tools/: control.py
doc/: cli.md  code.md  import.md
