[project]
name = "codemaoedutools"
version = "2.1.0"
description = "为编程猫社区的“老师”们提供更便捷的API调用方案，且用且珍惜"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "coloredlogs>=15.0",
    "fake-useragent>0.1.11",
    "openpyxl>=3.0.9",
    "pandas>=1.3.0",
    "requests>=2.25.1",
]

[project.scripts]
codemaoedutools = "CodemaoEDUTools.__main__:main"